 * plugins/pluginmacros.h:
   Add filetypes_array macro to allow use of filetypes[ft_id].
 * src/templates.c, src/build.c, src/utils.c, src/win32.c,
   src/highlighting.c, src/dialogs.c, src/msgwindow.c, src/keyfile.c,
   src/filetypes.c, src/filetypes.h, src/document.c, src/symbols.c,
   src/ui_utils.c:
   Rename GEANY_FILETYPES_ALL GEANY_FILETYPES_NONE.


2008-05-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c, src/filetypes.h:
   Remove unused filetype::item field.
   Create FullFileType private type that 'inherits' from filetype
   (FullFileType* can be cast to filetype*). This is used in
   filetypes_new() to hide filetype struct fields from the API.
   Remove radio_items[] and use FullFileType::menu_item instead.


2008-05-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/keyfile.c, src/filetypes.c, src/filetypes.h:
   Store filetype::name instead of unique ID when saving sessions.
   Remove all filetype UID code.
 * src/filetypes.c, src/filetypes.h:
   Add filetypes_find() that calls a predicate function for each
   filetype in filetypes_hash until TRUE is returned.
   Make filetypes_detect_from_extension() work for all filetypes
   in filetypes_hash.
 * src/filetypes.c:
   Add filetypes_new() to create and initialize a new filetype.
 * src/filetypes.c, src/filetypes.h:
   Remove filetypes_find(), which will be replaced with a dynamic array
   of filetype pointers (more flexible and backwards compatible with
   existing code).
 * src/plugindata.h, src/filetypes.c, src/filetypes.h, src/plugins.c:
   Add filetypes_array to GeanyData for plugins to access a dynamic
   array of filetype pointers.


2008-04-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keyfile.c, src/keyfile.h, src/main.c:
   Refactor open_session_file() from configuration_open_files().
 * src/keyfile.c:
   Refactor get_session_file_string() from
   configuration_save_session_files().

