@@ -15,6 +15,9 @@
    src/filetypes.c, src/filetypes.h, src/document.c, src/symbols.c,
    src/ui_utils.c:
    Rename GEANY_FILETYPES_ALL GEANY_FILETYPES_NONE.
+ * src/plugindata.h:
+   Add deprecated aliases for GEANY_MAX_FILE_TYPES and
+   GEANY_FILETYPES_ALL.
 
 
 2008-05-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
